Fix spacing at typed-text

--- a/src/styles/components/welcomeTyped.scss
+++ b/src/styles/components/welcomeTyped.scss
@@ -7,7 +7,6 @@
   display: flex;
   align-items: flex-end;
   max-width: 70%;
-  margin: auto;
 
   @media (max-width: 768px) {
     font-size: 4.5rem !important;
